@@ -7,6 +7,7 @@ fixed bugs:
 - fixed reward computation in ALNS on continuous, especially nonlinear, problems
 - fixed bug in freeing reoptimization data if problem was solved during presolving
 - fixed check of timing in heur_completesol
+- fixed wrong propagation in optcumulative constraint handler
 
 SCIP version 5.0.1
 ==================
